Refactor to return courseview and sessionview