@@ -4,7 +4,6 @@ import java.time.Instant;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 
@@ -14,25 +13,27 @@ import teammates.storage.entity.FeedbackSession;
  * The API output format of a list of {@link FeedbackSession}.
  */
 public class FeedbackSessionsData implements ApiOutput {
-    private final List<FeedbackSessionData> feedbackSessions;
+    private final List<FeedbackSessionViewData> feedbackSessions;
 
     @JsonCreator(mode = JsonCreator.Mode.PROPERTIES)
-    private FeedbackSessionsData(FeedbackSessionData[] feedbackSessions) {
+    private FeedbackSessionsData(FeedbackSessionViewData[] feedbackSessions) {
         this.feedbackSessions = Arrays.asList(feedbackSessions);
     }
 
     public FeedbackSessionsData(List<FeedbackSession> feedbackSessionList) {
         this.feedbackSessions =
-                feedbackSessionList.stream().map(FeedbackSessionData::new).collect(Collectors.toList());
+                feedbackSessionList.stream()
+                        .map(session -> new FeedbackSessionViewData(new FeedbackSessionData(session)))
+                        .toList();
     }
 
     public FeedbackSessionsData(Map<FeedbackSession, Instant> feedbackSessionToDeadline) {
         this.feedbackSessions = feedbackSessionToDeadline.entrySet().stream()
-                .map(e -> new FeedbackSessionData(e.getKey(), e.getValue()))
-                .collect(Collectors.toList());
+                .map(e -> new FeedbackSessionViewData(new FeedbackSessionData(e.getKey(), e.getValue())))
+                .toList();
     }
 
-    public List<FeedbackSessionData> getFeedbackSessions() {
+    public List<FeedbackSessionViewData> getFeedbackSessions() {
         return feedbackSessions;
     }
 
